# voltcast

./: .gitignore  BUILD_PLAN.md  README.md  pyproject.toml
.github/workflows/: build.yml  forecast.yml  retrain.yml
api/: main.py
dashboard/: app.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/forecast/[region]/: route.ts
frontend/app/how-it-works/: page.tsx
src/: backfill_wape.py  dataset.py  drift.py  evaluate.py  features.py  inference.py  ingestion.py  mlflow_setup.py  model.py  pipeline.py  registry.py  storage.py  train.py  validation.py
