[project]
name = "voltcast"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.21",
    "fastapi>=0.138.1",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "pandera>=0.32.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
]
